# assistente-de-pesquisa-multiagente

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
docs/: como-funciona.md  explicacao-diagrama.md
src/agents/: agents.py
src/tools/: tools.py
