[project]
name = "02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.31.0",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "trafilatura>=2.1.0",
]
